fix: visible scrollbar for sidemenu & content

--- a/src/app/components/split-pane/SideMenu.scss
+++ b/src/app/components/split-pane/SideMenu.scss
@@ -57,16 +57,6 @@ ion-menu.md {
       border-bottom-right-radius: 5px;
     }
   }
-
-  ion-content {
-    // hide menu scrollbar
-    --offset-bottom: auto !important;
-    --overflow: hidden;
-    overflow: auto;
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
 }
 
 ion-menu ion-list {
