--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -23,6 +23,19 @@ body *:not(ion-button) {
   text-decoration-color: var(--ion-color-primary) !important;
 }
 
+ion-content {
+  --offset-bottom: auto !important;
+  --overflow: hidden;
+  overflow: auto;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 ion-input {
   font-family: inherit !important;
 }
